--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.kotlinlearning">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.kotlinlearning"
+    tools:ignore="ExtraText">
+    //网络权限
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
