--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
+
+        // Add the Crashlytics Gradle plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
     }
 }
 
