--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,9 @@ dependencies {
     // flurry
     implementation 'com.flurry.android:analytics:13.1.0@aar'
 
+    //广告
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
